Terrain Painting update & Tree view update & CoreData structure update
Made:
	- Updated CoreData strucutre
	- Updated tree view (right) view and structure
	- Updated Collision Manager
	- Updated File Selector GUI Element
	- Updated Terrain Painter
		- Better brush
		- Collision updates

To Do:
	- Work on fluidity when painting a terrain
	- Find function to get the center of the circle when painting a terrain

--- a/.gitignore
+++ b/.gitignore
@@ -3219,3 +3219,85 @@ SSWE/data/Turbo/UDKMap/UN_Misc_BSP_Materials_M_UN_Misc_BSP_FlourescentLight01_S.
 SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_D.bmp
 SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_N.bmp
 SSWE/data/Turbo/UDKMap/UN_Sky_SM_Materials_M_UN_Sky_SM_Dome03_S.bmp
+SSWE/Big Height Maps/Test/Thumbs.db
+SSWE/Big Height Maps/Test2/Thumbs.db
+SSWE/Big Height Maps/Test3/detail.jpg
+SSWE/Big Height Maps/Test3/heightmaps/map1.png
+SSWE/Big Height Maps/Test3/heightmaps/map10.png
+SSWE/Big Height Maps/Test3/heightmaps/map11.png
+SSWE/Big Height Maps/Test3/heightmaps/map12.png
+SSWE/Big Height Maps/Test3/heightmaps/map13.png
+SSWE/Big Height Maps/Test3/heightmaps/map14.png
+SSWE/Big Height Maps/Test3/heightmaps/map15.png
+SSWE/Big Height Maps/Test3/heightmaps/map16.png
+SSWE/Big Height Maps/Test3/heightmaps/map2.png
+SSWE/Big Height Maps/Test3/heightmaps/map3.png
+SSWE/Big Height Maps/Test3/heightmaps/map4.png
+SSWE/Big Height Maps/Test3/heightmaps/map5.png
+SSWE/Big Height Maps/Test3/heightmaps/map6.png
+SSWE/Big Height Maps/Test3/heightmaps/map7.png
+SSWE/Big Height Maps/Test3/heightmaps/map8.png
+SSWE/Big Height Maps/Test3/heightmaps/map9.png
+SSWE/Big Height Maps/Test3/heightmaps/Thumbs.db
+SSWE/Big Height Maps/Test3/textures/color1.png
+SSWE/Big Height Maps/Test3/textures/color10.png
+SSWE/Big Height Maps/Test3/textures/color11.png
+SSWE/Big Height Maps/Test3/textures/color12.png
+SSWE/Big Height Maps/Test3/textures/color13.png
+SSWE/Big Height Maps/Test3/textures/color14.png
+SSWE/Big Height Maps/Test3/textures/color15.png
+SSWE/Big Height Maps/Test3/textures/color16.png
+SSWE/Big Height Maps/Test3/textures/color2.png
+SSWE/Big Height Maps/Test3/textures/color3.png
+SSWE/Big Height Maps/Test3/textures/color4.png
+SSWE/Big Height Maps/Test3/textures/color5.png
+SSWE/Big Height Maps/Test3/textures/color6.png
+SSWE/Big Height Maps/Test3/textures/color7.png
+SSWE/Big Height Maps/Test3/textures/color8.png
+SSWE/Big Height Maps/Test3/textures/color9.png
+SSWE/Big Height Maps/Test3/textures/Thumbs.db
+SSWE/Big Height Maps/Test3/Thumbs.db
+SSWE/Big Height Maps/Test3/totalmap.png
+SSWE/data/Statu_LowPoly/Ground.jpg
+SSWE/data/Statu_LowPoly/render_image.jpg
+SSWE/data/Statu_LowPoly/Statu_lowpoly.blend
+SSWE/data/Statu_LowPoly/Statu_lowpoly.mtl
+SSWE/data/Statu_LowPoly/Statu_texture.jpg
+SSWE/data/Trees/Foliage/Bark.x
+SSWE/data/Trees/Foliage/Fern.x
+SSWE/data/Trees/Foliage/Low poly foliege.blend
+SSWE/data/Trees/Foliage/Mapple.x
+SSWE/data/Trees/Foliage/Pine.x
+SSWE/data/Trees/Foliage/textures/bark-oldbrown-c.png
+SSWE/data/Trees/Foliage/textures/bark-oldbrown-n.png
+SSWE/data/Trees/Foliage/textures/Bark_normal.png
+SSWE/data/Trees/Foliage/textures/Bark_Tile.jpg
+SSWE/data/Trees/Foliage/textures/BarkMossy-tiled-c.png
+SSWE/data/Trees/Foliage/textures/BarkMossy-tiled-n.png
+SSWE/data/Trees/Foliage/textures/ivy_leaves_a.png
+SSWE/data/Trees/Foliage/textures/ivy_leaves_c.png
+SSWE/data/Trees/Foliage/textures/ivy_leaves_n.png
+SSWE/data/Trees/Foliage/textures/leaf-mapple-green-yellow-c.png
+SSWE/data/Trees/Foliage/textures/leaf-mapple-yellow-a.png
+SSWE/data/Trees/Foliage/textures/leaf-mapple-yellow-c.png
+SSWE/data/Trees/Foliage/textures/leaf-mapple-yellow-ni.png
+SSWE/data/Trees/Foliage/textures/LeafnormalX_normals.PNG
+SSWE/data/Trees/Foliage/textures/leaves-a.png
+SSWE/data/Trees/Foliage/textures/leaves-c.png
+SSWE/data/Trees/Foliage/textures/lily-a.png
+SSWE/data/Trees/Foliage/textures/lily-c.png
+SSWE/data/Trees/Foliage/textures/lily-n.png
+SSWE/data/Trees/Foliage/textures/oak-branch-a.png
+SSWE/data/Trees/Foliage/textures/oak-branch-c.png
+SSWE/data/Trees/Foliage/textures/oak-branch-n.png
+SSWE/data/Trees/Foliage/textures/pine-a.png
+SSWE/data/Trees/Foliage/textures/pine-c.png
+SSWE/data/Trees/Foliage/textures/pine-n.png
+SSWE/data/Trees/Foliage/textures/Rore_fern-a.png
+SSWE/data/Trees/Foliage/textures/Rore_fern-c.png
+SSWE/data/Turbo/Benches/bench.3ds
+SSWE/data/Turbo/Benches/marble.png
+SSWE/data/Turbo/Benches/steel.png
+SSWE/data/Turbo/Benches/wood.png
+SSWE/Height_Maps/crab_island_hm.jpg
+SSWE/Height_Maps/normal_map_crab_island.tga
