Worked on Depth Of Field effect
Made:
	- Setted driver multi-threaded
	- Added (x)SColori for material shader constants
	- Fixed Depth Of Field rendering
	- Sended new node added when adding a new node to the scene
	- Fixed getSelectedNode() in MainWindow class

To Do:
	- Smooth terrains when painting

--- a/.gitignore
+++ b/.gitignore
@@ -3301,3 +3301,52 @@ SSWE/data/Turbo/Benches/steel.png
 SSWE/data/Turbo/Benches/wood.png
 SSWE/Height_Maps/crab_island_hm.jpg
 SSWE/Height_Maps/normal_map_crab_island.tga
+SSWE/data/Model Tests/conference/conference.max
+SSWE/data/Model Tests/conference/conference.mtl
+SSWE/data/Model Tests/conference/copyright.txt
+SSWE/data/Model Tests/dabrovic-sponza/00_skap.JPG
+SSWE/data/Model Tests/dabrovic-sponza/01_S_ba.JPG
+SSWE/data/Model Tests/dabrovic-sponza/01_S_kap-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/01_S_kap.JPG
+SSWE/data/Model Tests/dabrovic-sponza/01_St_kp-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/01_St_kp.JPG
+SSWE/data/Model Tests/dabrovic-sponza/01_STUB-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/01_STUB.JPG
+SSWE/data/Model Tests/dabrovic-sponza/copyright.txt
+SSWE/data/Model Tests/dabrovic-sponza/KAMEN-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/KAMEN-stup.JPG
+SSWE/data/Model Tests/dabrovic-sponza/KAMEN.JPG
+SSWE/data/Model Tests/dabrovic-sponza/prozor1.JPG
+SSWE/data/Model Tests/dabrovic-sponza/reljef-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/reljef.JPG
+SSWE/data/Model Tests/dabrovic-sponza/sp_luk-bump.JPG
+SSWE/data/Model Tests/dabrovic-sponza/sp_luk.JPG
+SSWE/data/Model Tests/dabrovic-sponza/sponza.max
+SSWE/data/Model Tests/dabrovic-sponza/sponza.mtl
+SSWE/data/Model Tests/dabrovic-sponza/vrata_ko.JPG
+SSWE/data/Model Tests/dabrovic-sponza/vrata_kr.JPG
+SSWE/data/Model Tests/dabrovic-sponza/x01_st-bump.jpg
+SSWE/data/Model Tests/dabrovic-sponza/x01_st.JPG
+SSWE/data/Model Tests/head/bump-lowRes.png
+SSWE/data/Model Tests/head/bump.png
+SSWE/data/Model Tests/head/head.mtl
+SSWE/data/Model Tests/head/Infinite-Scan_License.txt
+SSWE/data/Model Tests/head/lambertian.jpg
+SSWE/data/Model Tests/head/rendered.jpg
+SSWE/data/Model Tests/sibenik/copyright.txt
+SSWE/data/Model Tests/sibenik/kamen-bump.png
+SSWE/data/Model Tests/sibenik/KAMEN-stup.png
+SSWE/data/Model Tests/sibenik/kamen.png
+SSWE/data/Model Tests/sibenik/mramor6x6-bump.png
+SSWE/data/Model Tests/sibenik/mramor6x6.png
+SSWE/data/Model Tests/sibenik/sibenik.max
+SSWE/data/Model Tests/sibenik/sibenik.mtl
+SSWE/data/Turbo/Houses/Medieval/house_diffuse.tga
+SSWE/data/Turbo/Houses/Medieval/house_normal.tga
+SSWE/data/Turbo/Houses/Medieval/house_obj.mtl
+SSWE/data/Turbo/Houses/Medieval/house_spec.tga
+SSWE/Height_Maps/grass.png
+SSWE/Height_Maps/grassn.png
+SSWE/Height_Maps/rock.png
+SSWE/Height_Maps/rockn.png
+SSWE/Height_Maps/rockwall.jpg
