Worked on RenderCore
Made:
	- Added CRenderCore class
		- Manage your landscape on a RTT Skybox
		- Needs fixes
	- Worked on XEffect transparent textures
		- Works with no skydomes
		- Try to find why skydomes and skyboxes don't work in XEffect
	- Worked on terrain painting

To Do:
	- Finish terrain painting
		- Smooth selected vertices
		- Work on planes when painting
		- Work on caves also

--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -164,6 +164,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWELib\CharacterEdition\ManualAnimation\CManualAction.cpp" />
     <ClCompile Include="SSWELib\Device\CDevices.cpp" />
     <ClCompile Include="SSWELib\Device\Core\CCoreUserInterface.cpp" />
+    <ClCompile Include="SSWELib\Device\Core\CRenderCore.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\CFileSystemScripting.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\CLuaBinds.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\CSceneScripting.cpp" />
@@ -252,6 +253,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWELib\CharacterEdition\ManualAnimation\CManualAction.h" />
     <ClInclude Include="SSWELib\Device\CDevices.h" />
     <ClInclude Include="SSWELib\Device\Core\CCoreUserInterface.h" />
+    <ClInclude Include="SSWELib\Device\Core\CRenderCore.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\CFileSystemScripting.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\CLuaBinds.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\CSceneScripting.h" />
