--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -183,6 +183,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterials.cpp" />
     <ClCompile Include="SSWELib\Renders\XEffect\Interfaces\CUIWindowEditMaterialsCallback.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\Animators\CRotationAnimator.cpp" />
+    <ClCompile Include="SSWELib\SceneNodes\Clouds\CloudSceneNode.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\LensFlareSceneNode.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\SceneNodeAnimatorFollowCamera.cpp" />
     <ClCompile Include="SSWELib\SceneNodes\TerrainSystem\CTerrainSystem.cpp" />
@@ -277,6 +278,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWELib\SceneNodes\Animators\CRotationAnimator.h" />
     <ClInclude Include="SSWELib\SceneNodes\Animators\ISceneNodeAnimatorFinishing.h" />
     <ClInclude Include="SSWELib\SceneNodes\Camera\CSceneNodeAnimatorCameraUpVector.h" />
+    <ClInclude Include="SSWELib\SceneNodes\Clouds\CloudSceneNode.h" />
     <ClInclude Include="SSWELib\SceneNodes\LensFlareSceneNode.h" />
     <ClInclude Include="SSWELib\SceneNodes\SceneNodeAnimatorFollowCamera.h" />
     <ClInclude Include="SSWELib\SceneNodes\TerrainSystem\CTerrainSystem.h" />
