Updated CDevices class
- Made:
	- Created IDevices interface
	- Prepared SSWELib plugins

To Do:
	- Set up SSWELib plugins

--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -243,6 +243,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DLLExport.h" />
+    <ClInclude Include="include\IDevices.h" />
     <ClInclude Include="include\IGraphicTool.h" />
     <ClInclude Include="include\IMonitor.h" />
     <ClInclude Include="include\IMonitorRegisterer.h" />
