Fixed Rigged Camera for release
Made:
	- Fixed Rigged Camera for releases of SSWE
	- Prepared SOther structure for user custom scene nodes

To Do:
	- Fix Rigged Camera x rotation due to all functions...
	- Think about how to do custom scene nodes for user (DLLs & DYLIBs ?)

Working On:
	- Working on D3D11 Driver in Irrlicht

--- a/SSWEProject/SSWETestPlugin/SSWETestPlugin.vcxproj
+++ b/SSWEProject/SSWETestPlugin/SSWETestPlugin.vcxproj
@@ -98,8 +98,8 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)SSWECore\Output\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SSWECore.lib;SSWERenders.lib;Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)Irrlicht\Irrlicht180\Output;$(SolutionDir)SSWERenders\Output\;$(SolutionDir)SSWECore\Output\;$(SolutionDir)SSWELib\Output\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SSWELib.lib;SSWECore.lib;SSWERenders.lib;Irrlicht.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)..\SSWE\plugins\SSWE\$(TargetName)$(TargetExt)" /y
