Cleaned Light Shafts and worked on IGUIViewPort Element
Made:
	- Deleted Light Shafts work
	- Worked  on IGUIViewPort Element
		- Set working with scene manager
		- Set working with the XEffect screenquad

To Do:
	- Work on Animator Editor with animators collection + UI per animator

--- a/.gitignore
+++ b/.gitignore
@@ -3350,3 +3350,103 @@ SSWE/Height_Maps/grassn.png
 SSWE/Height_Maps/rock.png
 SSWE/Height_Maps/rockn.png
 SSWE/Height_Maps/rockwall.jpg
+SSWE/data/Architecture/tex/00000028.png
+SSWE/data/Architecture/tex/0001.png
+SSWE/data/Architecture/tex/arcD.jpg
+SSWE/data/Architecture/tex/arcDN.jpg
+SSWE/data/Architecture/tex/arcN.jpg
+SSWE/data/Architecture/tex/baget.jpg
+SSWE/data/Architecture/tex/bagetAO.jpg
+SSWE/data/Architecture/tex/bagetDN.jpg
+SSWE/data/Architecture/tex/bagetN.jpg
+SSWE/data/Architecture/tex/blue ref.png
+SSWE/data/Architecture/tex/bortic.AO.jpg
+SSWE/data/Architecture/tex/borticN.jpg
+SSWE/data/Architecture/tex/C1D.jpg
+SSWE/data/Architecture/tex/C1N.jpg
+SSWE/data/Architecture/tex/CD.jpg
+SSWE/data/Architecture/tex/CgonD.jpg
+SSWE/data/Architecture/tex/CgonN.jpg
+SSWE/data/Architecture/tex/chugD.jpg
+SSWE/data/Architecture/tex/chugN.jpg
+SSWE/data/Architecture/tex/circkeLLN.jpg
+SSWE/data/Architecture/tex/CircleBadhAO.jpg
+SSWE/data/Architecture/tex/CircleBadhN.jpg
+SSWE/data/Architecture/tex/circleLLAO.jpg
+SSWE/data/Architecture/tex/cleanston.jpg
+SSWE/data/Architecture/tex/CN.jpg
+SSWE/data/Architecture/tex/colAO.jpg
+SSWE/data/Architecture/tex/coldamAO.jpg
+SSWE/data/Architecture/tex/coldamN.jpg
+SSWE/data/Architecture/tex/colkusok1AO.jpg
+SSWE/data/Architecture/tex/colkusok1N.jpg
+SSWE/data/Architecture/tex/colkusok2AO.jpg
+SSWE/data/Architecture/tex/colkusok2N.jpg
+SSWE/data/Architecture/tex/colN.jpg
+SSWE/data/Architecture/tex/colston.jpg
+SSWE/data/Architecture/tex/colstonN.jpg
+SSWE/data/Architecture/tex/curvedugaAO.jpg
+SSWE/data/Architecture/tex/curvedugaN.jpg
+SSWE/data/Architecture/tex/efeu_branch.png
+SSWE/data/Architecture/tex/efeu_branch_norm.jpg
+SSWE/data/Architecture/tex/efeu1.png
+SSWE/data/Architecture/tex/efeu1_dead_2.png
+SSWE/data/Architecture/tex/efeu1_Norm.jpg
+SSWE/data/Architecture/tex/gora.jpg
+SSWE/data/Architecture/tex/goraN.jpg
+SSWE/data/Architecture/tex/grad1d.jpg
+SSWE/data/Architecture/tex/keys.jpg
+SSWE/data/Architecture/tex/Kirpich.jpg
+SSWE/data/Architecture/tex/KirpichBD.jpg
+SSWE/data/Architecture/tex/KirpichBN.jpg
+SSWE/data/Architecture/tex/KirpichN.jpg
+SSWE/data/Architecture/tex/kubAO.jpg
+SSWE/data/Architecture/tex/kubN.jpg
+SSWE/data/Architecture/tex/logo_name.tga
+SSWE/data/Architecture/tex/panAO.jpg
+SSWE/data/Architecture/tex/panN.jpg
+SSWE/data/Architecture/tex/periloAO.jpg
+SSWE/data/Architecture/tex/periloN.jpg
+SSWE/data/Architecture/tex/polN.jpg
+SSWE/data/Architecture/tex/QD.jpg
+SSWE/data/Architecture/tex/Qmel.jpg
+SSWE/data/Architecture/tex/QmelN.jpg
+SSWE/data/Architecture/tex/QN.jpg
+SSWE/data/Architecture/tex/Qt2D.jpg
+SSWE/data/Architecture/tex/Qt2N.jpg
+SSWE/data/Architecture/tex/QtD.jpg
+SSWE/data/Architecture/tex/QtN.jpg
+SSWE/data/Architecture/tex/roofs2.jpg
+SSWE/data/Architecture/tex/roofs2N.jpg
+SSWE/data/Architecture/tex/RoofUzor.D.png
+SSWE/data/Architecture/tex/RoofUzorAO.jpg
+SSWE/data/Architecture/tex/RoofUzorN.jpg
+SSWE/data/Architecture/tex/sky2.jpg
+SSWE/data/Architecture/tex/start.jpg
+SSWE/data/Architecture/tex/steclo1.jpg
+SSWE/data/Architecture/tex/steclo1C.jpg
+SSWE/data/Architecture/tex/steclo1CN.jpg
+SSWE/data/Architecture/tex/steclo1N.jpg
+SSWE/data/Architecture/tex/Thumbs.db
+SSWE/data/Architecture/tex/W.C1.jpg
+SSWE/data/Architecture/tex/W.C1N.jpg
+SSWE/data/Architecture/tex/W.C2.jpg
+SSWE/data/Architecture/tex/W.C2N.jpg
+SSWE/data/Architecture/tex/W.tre.jpg
+SSWE/data/Architecture/tex/W.U.jpg
+SSWE/data/Architecture/tex/W.UC.jpg
+SSWE/data/Architecture/tex/W.UCN.jpg
+SSWE/data/Architecture/tex/W.UN.jpg
+SSWE/data/Architecture/tex/W.Up.jpg
+SSWE/data/Architecture/tex/W.UpN.jpg
+SSWE/data/Architecture/tex/wallBaget2D.jpg
+SSWE/data/Architecture/tex/wallBaget2N.jpg
+SSWE/data/Architecture/tex/wallBagetD.jpg
+SSWE/data/Architecture/tex/wallBagetN.jpg
+SSWE/data/Architecture/tex/wallStolbD.jpg
+SSWE/data/Architecture/tex/wallStolbN.jpg
+SSWE/data/Architecture/tex/Wind1.blockN.jpg
+SSWE/data/Architecture/tex/wind2N.jpg
+SSWE/data/Architecture/tex/woodD.jpg
+SSWE/data/Architecture/tex/woodN.jpg
+SSWE/data/Architecture/ZAMOK.mtl
