--- a/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj.filters
+++ b/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="OculusRift.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="XIL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
